# corecursive

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: index.md
include/avakar/: corecursive.h
test/: test.cpp
